# websearch_duc_tool

./: .env.example  AGENTS.md  README.md  pyproject.toml
src/: duckduckgo_scraper.py  orchestrator.py  renderer.py  summarizer.py
src/websearch_duc_tool/: __init__.py  renderer.py  tools.py
tests/: test_orchestrator.py  test_renderer.py  test_scraper.py  test_summarizer.py
